--- a/static/index.html
+++ b/static/index.html
@@ -22,43 +22,53 @@
             <p class="helloText" id="helloText">Привет,Максим!</p>
         </div>
     </nav>
-
+    <section id="HelloSection" style="margin: 0px; padding: 0px;">
+        <div class="check">
+            <p class="brandText checkImg">Психологический weekend</p>
+            <P class="whatAboutTour"><b>Цель тура:</b> Отдых тела и души</P>
+            <div class="buttonsHeader">
+                <a class="customButton classForMedia" id="buttonForBron" href="#forHref">Забронировать</a>
+                <a class="customButton classForMedia" id="buttonAbout" href="#forHref1">Программа тура</a>
+            </div>
+            <img src="img/helloSection/photoSection1.jpg" class="image image1" id="photo1">
+        </div>
+    </section>
     <section id="AboutCourse">
-        <h1 class="ml-2 mb-4 textWhat">Что входит в тур?</h1>
-        <p class="textInside" style="margin-top: 2rem;"><b>В программу тура входит:</b></p>
+        <h1 class="ml-2 mb-4 textWhat" id="forHref1">Что входит в тур?</h1>
+        <p class="textInside" style="margin-top: 2rem;"><b>В программу входит:</b></p>
         <ul>
             <li class="textInside">Групповая гипнотерапия;</li>
             <li class="textInside">Посещение озера Севан и его окрестностей;</li>
-            <li class="textInside">Смехотерапия, которая рассмешит даже самого серьезного человека; </li>
+            <li class="textInside">Смехотерапия, которая рассмешит даже самого серьезного человека;</li>
             <li class="textInside">Практики (йога, медитация);</li>
             <li class="textInside">Незабываемая кухня;</li>
             <li class="textInside">И конечно же, ваше хорошее настроение.</li>
         </ul>
         <p class="textInside" style="margin-top: 2rem;"><b>Описание тура:</b></p>
-        <p class="textInside"><b>Стоимость тура:</b> 133 тыс. драмов В стоимость входит в трансфер, гостиница, питание, сеансы, терапия, консультация․</p>
+        <p class="textInside"><b>Стоимость:</b>133 тыс. драмов. В стоимость входит: трансфер, гостиница, питание, сеансы, терапия, консультация․</p>
         <ul>
-            <li class="textInside">
+            <li class="textInside" style="margin-top: 1rem;">
                 <b>1-й день:</b>
                 <br>Наш уникальный тур начинается в историческом городе Ереван. В 15:00 собираемся на площади Железнодорожного вокзала, откуда на комфортабельном автобусе направляемся в красивый город Дилижан. В Армении его называют «Маленькая Швейцария»
-                (расстояние 110 км). Прибываем в гостиницу с завораживающей природой «Агарцин». После заселение в номера мы отдыхаем с дороги, а вечером нас ждет вкусный ужин с шашлыком и увлекательный тренинг – «Знакомство».
+                (расстояние 110 км). Прибываем в гостиницу с завораживающей природой «Агарцин». После прибытия осуществляется заселение в номера, мы отдыхаем с дороги, а вечером нас ждет вкусный ужин с шашлыком и увлекательный тренинг – «Знакомство».
             </li>
-            <li class="textInside">
+            <li class="textInside" style="margin-top: 1rem;">
                 <b>2-й день:</b>
                 <br>День начнем с йоги (по желанию), но думаем, что равнодушных не будет. Она даст заряд энергией на весь день, поднимет настроение и поможет окончательно проснуться. После вкусного завтрака выезжаем в район великолепного озера Севан (расстояние
-                20 км). На высоте 2200 метров над уровнем моря, в лесной поляне проведем медитацию, которая очистит ваш разум, наполнит высокими вибрациями и гармонизирует ваше состояние, а горный чистый воздух наполнит ваш организм кислородом. После
-                медитации отправляемся к храму «Севанаванк», где на высоте птичьего полета можно насладиться пейзажами озера Севан, его окрестностями и сделать красивые фотографии на память. Обед будет проходить в шикарном ресторане на берегу озера Севан,
-                где можно также любоваться красотой озера и слушать крик чаек. Затем мы возвращаемся в гостиницу, где отдыхаем с дороги и проводим личное время.После ужина «Гвоздь программы № 1» - групповой гипнотерапевтический сеанс, который настроит
+                20 км). На высоте 2200 метров над уровнем моря, в лесной поляне, проведем медитацию, которая очистит ваш разум, наполнит высокими вибрациями и гармонизирует ваше состояние, а горный чистый воздух наполнит ваш организм кислородом. После
+                медитации отправляемся к храму «Севанаванк», где на высоте птичьего полета можно насладиться пейзажами озера Севан, его окрестностями, и сделать красивые фотографии на память. Обед будет проходить в шикарном ресторане на берегу озера Севан,
+                где можно также любоваться красотой озера, и слушать крик чаек. Затем мы возвращаемся в гостиницу, где отдыхаем с дороги и проводим личное время. После ужина «Гвоздь программы № 1» - групповой гипнотерапевтический сеанс, который настроит
                 ваши мысли на позитив, подарит легкость и уверенность, перестроит вашу психику. А также успокоит вашу нервную систему.
             </li>
-            <li class="textInside">
+            <li class="textInside" style="margin-top: 1rem;">
                 <b>3-й день:</b>
-                <br>Для бодрого и прекрасного утра мы начинаем его с йоги (по желанию). После завтрака нас ждет «Гвоздь программы № 2» - смехатерапия, с элементами йоги смеха. Сеанс позволит зарядиться позитивной энергией надолго, а также оставит хорошие
-                напоминания отдыха. Эндорфины гарантированы. После сеанса личное время (бассейн, настольные игры, тренажёрный зал, прогулка), обед. Перед отъездом, нас ждет «чайная церемония», но не по обычаям Японии, а как в Армении - по домашнему, где
-                мы обсудим наш с вами отдых. Отдохнувшие, наполненные энергией и позитивом возвращаемся в город Ереван.
+                <br>Прекрасное и бодрое утро мы начинаем не с кофе, а с йоги (по желанию). После завтрака нас ждет «Гвоздь программы № 2» - смехотерапия, с элементами йоги смеха. Сеанс позволит зарядиться позитивной энергией надолго, а также оставит хорошие
+                воспоминания об отдыхе. Эндорфины гарантированы. После сеанса личное время (бассейн, настольные игры, тренажёрный зал, прогулка), обед. Перед отъездом нас ждет «чайная церемония», но не по обычаям Японии, а как в Армении – по-домашнему,
+                где мы обсудим наш с вами отдых. Отдохнувшие, наполненные энергией и позитивом возвращаемся в город Ереван.
             </li>
         </ul>
         <ul>
-            <p class="textInside" style="margin-top: 2rem;"><b>Что вы получите от психологического тура:</b></p>
+            <p class="textInside" style="margin-top: 2rem;" id="forHref"><b>Что вы получите от психологического тура:</b></p>
             <li class="textInside">Обретение психологической целостности;</li>
             <li class="textInside">Гармония с самим собой и окружающим миром;</li>
             <li class="textInside">Принятие себя;</li>
@@ -68,8 +78,8 @@
             <li class="textInside">Успокоение нервной системы.</li>
         </ul>
         <p class="textInside" style="margin-top: 2rem;margin-bottom: 2rem;">
-            <b>Для бронирования места</b> в нашем уикенде, вам необходимо оставить заявку (заполнить необходимые поля). После бронирования мы обязательно с вами свяжемся и обсудим все необходимые вопросы. После вашего положительного ответа, обсудим с
-            вами форму оплаты.
+            <b>Для бронирования места</b>в нашем уикенде вам необходимо оставить заявку (заполнить необходимые поля). После бронирования мы обязательно с вами свяжемся и обсудим все необходимые вопросы. После вашего положительного ответа обсудим с вами
+            форму оплаты.
         </p>
         <button class="sendReq" onclick="checkLogin()" id="sendReqRegister">Забронировать</button>
         <div class="alert alert-danger" role="alert" id="alertLoginFirst" style="display: none;">
@@ -88,7 +98,7 @@
     <section id="howItGoing">
         <h1 class="ml-2 mb-4 textWhat">Кто будет проводить тур?</h1>
         <p class="textInside">Наш тур будут проводить высококвалифицированные специалисты, теперь немного поговорим о них:</p>
-        <p class="textInside" style="margin-top: 1rem;"><b>Мирзоян Татул Суренович-</b> его основная работа связана тем, что он помогаю людям, избавится от накопившихся психологических проблем.<br>Татул Суренович - дипломированный психолог, а так же сертифицированный гипнотерапевт.</p>
+        <p class="textInside" style="margin-top: 1rem;"><b>Мирзоян Татул Суренович-</b>его основная работа связана тем, что он помогает людям избавиться от накопившихся психологических проблем.<br>Татул Суренович - дипломированный психолог, а так же сертифицированный гипнотерапевт.</p>
         <div class="container">
             <div class="row">
                 <div class="col-12" style="padding-left: 0px;">
@@ -149,12 +159,12 @@
             </div>
         </div>
 
-        <p class="textInside"><b>Сона Рудиковна Харазян-</b>помощник обеспечивающий успешную групповую коммуникацию.</p>
+        <p class="textInside"><b>Сона Рудиковна Харазян-</b>помощник, обеспечивающий успешную групповую коммуникацию.</p>
 
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <img src="./img/tatulsWife.jpg" class="photos" id="tatulWife">
+                    <img src="./img/tatulsWife.jpg" class="photos1" id="tatulWife">
                 </div>
                 <div class="col-12">
                     <p class="textInside" style="color: #102d77;margin-top: 1rem;">Образование:</p>
@@ -176,11 +186,11 @@
                 </div>
             </div>
         </div>
-        <p class="textInside"><b>Иванова Вероника Эдуардовна-</b>профессионал в области йоги,так же будет проводить медитации</p>
+        <p class="textInside"><b>Иванова Вероника Эдуардовна-</b>профессионал в области йоги, так же будет проводить медитации</p>
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <img src="./img/veronika.png" style="width: 35%;">
+                    <img src="./img/veronica.jpg" class="photoVeronica">
                 </div>
                 <div class="col-12">
                     <p class="textInside" style="color: #102d77;margin-top: 1rem;">Образование:</p>
@@ -212,10 +222,10 @@
                     <img src="./img/hotel/photoHotel1.jpg" style="width: 100%;height: 100%; padding-bottom: 2rem;">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p class="textInside">Интерьер, который обеспечен всем необходимыми условиями для комфортного и полноценного отдыха. Из номеров открывается вид на красивую природу. Ресторан предлагает широкий выбор блюд национальной и европейской кухни. Ресторан предлагает
-                        широкий выбор блюд национальной и европейской кухни. У нас действует бильярд и настольный теннис, также есть бассейн и сауна. На всей территории есть бесплатный Wi-Fi. Высококачественное обслуживание и качественные услуги отеля
-                        удовлетворят даже требования самого требовательного посетителя. Отель расположен в самом сердце города, рядом с многочисленными достопримечательностями и развлекательными центрами. Гостиничный комплекс Агарцин-идеальное место для
-                        всех, кто хочет оторваться от городского шума и провести свой отдых на природе. Каждый день, проведенный здесь, будет полон незабываемых и приятных воспоминаний.</p>
+                    <p class="textInside">Интерьер, который обеспечен всеми необходимыми условиями для комфортного и полноценного отдыха. Из номеров открывается вид на красивую природу. Ресторан предлагает широкий выбор блюд национальной и европейской кухни. У нас действует
+                        бильярд и настольный теннис, также есть бассейн и сауна. По всей территории есть бесплатный Wi-Fi. Высококачественное обслуживание и качественные услуги отеля удовлетворят требования даже самого требовательного посетителя. Отель
+                        расположен в самом сердце города, рядом с многочисленными достопримечательностями и развлекательными центрами. Гостиничный комплекс Агарцин-идеальное место для всех, кто хочет оторваться от городского шума и провести свой отдых
+                        на природе. Каждый день, проведенный здесь, будет полон незабываемых и приятных воспоминаний.</p>
                 </div>
             </div>
         </div>
@@ -269,7 +279,7 @@
                     <img src="./img/carMersedes.jpg" id="carPhoto">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p class="textInside">Для комфортного перемещения мы предлагаем микроавтобус Мерседес-Спринтер.<br> Что включает в себя микроавтобус этой модели? </p>
+                    <p class="textInside">Для комфортного перемещения мы предлагаем микроавтобус Мерседес-Спринтер.<br>Что включает в себя микроавтобус этой модели?</p>
                     <ul>
                         <li class="textInside">в первую очередь – просторный салон с кондиционером и комфортными креслами;</li>
                         <li class="textInside">имеется видеосистема (TV+DVD) и аудиосистема;</li>
@@ -356,19 +366,19 @@
             <div class="row" id="secondRowOfConnection">
                 <div class="col-12" id="connectWithUsSecond">
                     <div class="connectionContainer">
-                        <p class="connectionText" id="telegramText">Мы в Telegram</p>
+                        <p class="connectionTextSecond" id="telegramText">Мы в Telegram</p>
                         <button class="connectionButton"><img src="img/telegram.png" class="connectionPhoto"/></button>
                     </div>
                     <div class="connectionContainer">
-                        <p class="connectionText" id="instaText">Мы в Instagram</p>
+                        <p class="connectionTextSecond" id="instaText">Мы в Instagram</p>
                         <button class="connectionButton"><img src="img/instagram.png" class="connectionPhoto"/></button>
                     </div>
                     <div class="connectionContainer">
-                        <p class="connectionText" id="faceText">Мы в Facebook</p>
+                        <p class="connectionTextSecond" id="faceText">Мы в Facebook</p>
                         <button class="connectionButton"><img src="img/facebook.png" class="connectionPhoto"/></button>
                     </div>
                     <div class="connectionContainer">
-                        <p class="connectionText" id="vkText">Мы в VK</p>
+                        <p class="connectionTextSecond" id="vkText">Мы в VK</p>
                         <button class="connectionButton"><img src="img/vk.png" class="connectionPhoto"/></button>
                     </div>
 
