--- a/static/index.html
+++ b/static/index.html
@@ -45,42 +45,55 @@
             <li class="textInside">И конечно же, ваше хорошее настроение.</li>
         </ul>
         <p class="textInside" style="margin-top: 2rem;"><b>Описание тура:</b></p>
-        <p class="textInside"><b>Стоимость:</b>133 тыс. драмов. В стоимость входит: трансфер, гостиница, питание, сеансы, терапия, консультация․</p>
+        <p class="textInside"><b>Стоимость пакета: </b>133 тыс. драмов. 133 тыс. драмов. В стоимость входит: </p>
+        <ul style="margin-top: 1rem;">
+            <li class="textInside">Трансфер</li>
+            <li class="textInside">Гостиница</li>
+            <li class="textInside">Питание</li>
+            <li class="textInside">Сеансы</li>
+            <li class="textInside">Терапия</li>
+            <li class="textInside">Консультация</li>
+        </ul>
+        <p class="textInside" style="margin-bottom: 1rem;">В гостинице так же можно пользоваться баром, бильярдом и сауной на платной основе. </p>
         <ul>
             <li class="textInside" style="margin-top: 1rem;">
                 <b>1-й день:</b>
-                <br>Наш уникальный тур начинается в историческом городе Ереван. В 15:00 собираемся на площади Железнодорожного вокзала, откуда на комфортабельном автобусе направляемся в красивый город Дилижан. В Армении его называют «Маленькая Швейцария»
-                (расстояние 110 км). Прибываем в гостиницу с завораживающей природой «Агарцин». После прибытия осуществляется заселение в номера, мы отдыхаем с дороги, а вечером нас ждет вкусный ужин с шашлыком и увлекательный тренинг – «Знакомство».
+                <br>Наш уникальный тур начинается в историческом городе Ереван. В 14:00 собираемся на площади Железнодорожного вокзала у памятника «Сасунци Давид». На комфортабельном автобусе направляемся в город Дилижан (расстояние 110 км). В Армении
+                его называют «Маленькая Швейцария». Прибываем в гостиницу «Агарцин», которая завораживает своей природой. Отдыхаем после заселения. Вечером нас ждет специальный ужин с шашлыком и увлекательный тренинг – «Знакомство».
+
             </li>
             <li class="textInside" style="margin-top: 1rem;">
                 <b>2-й день:</b>
-                <br>День начнем с йоги (по желанию), но думаем, что равнодушных не будет. Она даст заряд энергией на весь день, поднимет настроение и поможет окончательно проснуться. После вкусного завтрака выезжаем в район великолепного озера Севан (расстояние
-                20 км). На высоте 2200 метров над уровнем моря, в лесной поляне, проведем медитацию, которая очистит ваш разум, наполнит высокими вибрациями и гармонизирует ваше состояние, а горный чистый воздух наполнит ваш организм кислородом. После
-                медитации отправляемся к храму «Севанаванк», где на высоте птичьего полета можно насладиться пейзажами озера Севан, его окрестностями, и сделать красивые фотографии на память. Обед будет проходить в шикарном ресторане на берегу озера Севан,
-                где можно также любоваться красотой озера, и слушать крик чаек. Затем мы возвращаемся в гостиницу, где отдыхаем с дороги и проводим личное время. После ужина «Гвоздь программы № 1» - групповой гипнотерапевтический сеанс, который настроит
-                ваши мысли на позитив, подарит легкость и уверенность, перестроит вашу психику. А также успокоит вашу нервную систему.
+                <br>День начнем с йоги (по желанию), но думаем, что равнодушных не будет. Она поднимет настроение и даст заряд энергии на весь день. После вкусного завтрака выезжаем в район озера Севан (расстояние 20 км), где на высоте 2200 метров над
+                уровнем моря, в лесной поляне проведем медитацию, которая очистит разум, наполнит высокими вибрациями и гармонизирует сознание. А горный чистый воздух наполнит ваш организм кислородом. После медитации отправляемся к храму «Севанаванк»,
+                где на высоте птичьего полета можно насладиться пейзажами озера Севан, его окрестностями, и сделать красивые фотографии на память. Обед будет проходить в шикарном ресторане на берегу озера Севан, где можно также любоваться красотой озера
+                и слушать крик чаек. Затем мы возвращаемся в гостиницу, где отдыхаем с дороги и проводим личное время. После ужина «Гвоздь программы № 1» - групповой гипнотерапевтический сеанс, который настроит ваши мысли на позитив, подарит легкость
+                и уверенность, перестроит вашу психику. А также успокоит вашу нервную систему.
+
             </li>
             <li class="textInside" style="margin-top: 1rem;">
                 <b>3-й день:</b>
-                <br>Прекрасное и бодрое утро мы начинаем не с кофе, а с йоги (по желанию). После завтрака нас ждет «Гвоздь программы № 2» - смехотерапия, с элементами йоги смеха. Сеанс позволит зарядиться позитивной энергией надолго, а также оставит хорошие
-                воспоминания об отдыхе. Эндорфины гарантированы. После сеанса личное время (бассейн, настольные игры, тренажёрный зал, прогулка), обед. Перед отъездом нас ждет «чайная церемония», но не по обычаям Японии, а как в Армении – по-домашнему,
-                где мы обсудим наш с вами отдых. Отдохнувшие, наполненные энергией и позитивом возвращаемся в город Ереван.
+                <br>Для бодрого и прекрасного утра мы начинаем его с йоги (по желанию). После завтрака нас ждет «Гвоздь программы № 2» - смехатерапия, с элементами йоги смеха. Сеанс позволит зарядиться позитивной энергией надолго, а также оставит хорошие
+                напоминания отдыха. Эндорфины гарантированы. После сеанса личное время (бассейн, настольные игры, тренажёрный зал, прогулка), обед. Перед отъездом нас ждет «чайная церемония», но не по обычаям Японии, а как в Армении – по-домашнему, где
+                мы обсудим наш с вами отдых. Отдохнувшие, наполненные энергией и позитивом возвращаемся в город Ереван.
             </li>
         </ul>
         <ul>
             <p class="textInside" style="margin-top: 2rem;" id="forHref"><b>Что вы получите от психологического тура:</b></p>
-            <li class="textInside">Обретение психологической целостности;</li>
-            <li class="textInside">Гармония с самим собой и окружающим миром;</li>
-            <li class="textInside">Принятие себя;</li>
-            <li class="textInside">Наполнение жизни смыслом;</li>
-            <li class="textInside">Заряд жизненной энергией;</li>
-            <li class="textInside">Приобретение уверенности в себе;</li>
-            <li class="textInside">Успокоение нервной системы.</li>
+            <li class="textInside">обретение психологической целостности;</li>
+            <li class="textInside">гармония с самим собой и окружающим миром;</li>
+            <li class="textInside">принятие себя;</li>
+            <li class="textInside">наполнение жизни смыслом;</li>
+            <li class="textInside">заряд жизненной энергией;</li>
+            <li class="textInside">приобретение уверенности в себе;</li>
+            <li class="textInside">успокоение нервной системы;</li>
+            <li class="textInside">знакомство с новыми людьми.</li>
         </ul>
         <p class="textInside" style="margin-top: 2rem;margin-bottom: 2rem;">
-            <b>Для бронирования места</b>в нашем уикенде вам необходимо оставить заявку (заполнить необходимые поля). После бронирования мы обязательно с вами свяжемся и обсудим все необходимые вопросы. После вашего положительного ответа обсудим с вами
+            <b>Для бронирования места</b>в нашем уикенде, вам необходимо оставить заявку (заполнить необходимые поля). После бронирования мы обязательно с вами свяжемся и обсудим все необходимые вопросы. После вашего положительного ответа, обсудим с вами
             форму оплаты.
         </p>
+        <p style="margin-top: 1rem;" class="textInside">Так же можете позвонить по указанным телефонам.</p>
         <button class="sendReq" onclick="checkLogin()" id="sendReqRegister">Забронировать</button>
         <div class="alert alert-danger" role="alert" id="alertLoginFirst" style="display: none;">
             Зарегистрируйтесь или войдите сначала. Так же вы можете нажать кнопку снизу и подать заявку используя только номер телефона
@@ -97,8 +110,10 @@
     </section>
     <section id="howItGoing">
         <h1 class="ml-2 mb-4 textWhat">Кто будет проводить тур?</h1>
-        <p class="textInside">Наш тур будут проводить высококвалифицированные специалисты, теперь немного поговорим о них:</p>
-        <p class="textInside" style="margin-top: 1rem;"><b>Мирзоян Татул Суренович-</b>его основная работа связана тем, что он помогает людям избавиться от накопившихся психологических проблем.<br>Татул Суренович - дипломированный психолог, а так же сертифицированный гипнотерапевт.</p>
+        <p class="textInside">Наш тур будут проводить высококвалифицированные специалисты.</p>
+        <p class="textInside" style="margin-top: 1rem;"><b>Мирзоян Татул Суренович - </b>Руководитель проекта. Дипломированный психолог, сетифицированный гипнотерапевт. Автор 24 уникальных гипнотерапевтических программ. Его основная работа связана тем, что он с помощью гипно и смехотерапии помогает
+            людям, избавится от накопившихся психологических проблем.
+        </p>
         <div class="container">
             <div class="row">
                 <div class="col-12" style="padding-left: 0px;">
@@ -159,7 +174,7 @@
             </div>
         </div>
 
-        <p class="textInside"><b>Сона Рудиковна Харазян-</b>помощник, обеспечивающий успешную групповую коммуникацию.</p>
+        <p class="textInside"><b>Сона Рудиковна Харазян - </b>помощник (фасилитатор), обеспечивающий успешную групповую коммуникацию.</p>
 
         <div class="container">
             <div class="row">
@@ -186,7 +201,7 @@
                 </div>
             </div>
         </div>
-        <p class="textInside"><b>Иванова Вероника Эдуардовна-</b>профессионал в области йоги, так же будет проводить медитации</p>
+        <p class="textInside"><b>Иванова Вероника Эдуардовна - </b>Инструктор по йоге и медитации</p>
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -207,6 +222,8 @@
                 <div class="col-12">
                     <ul>
                         <li class="textInside">2018 йога, пилатес, стретчинг.</li>
+                        <li class="textInside">2003-2016 Спортивно-бальные танцы;</li>
+                        <li class="textInside">2022 «Женственность. Гармонизация сфер»;</li>
                         <li class="textInside">2023 «Нейрографика».</li>
                     </ul>
                 </div>
@@ -222,10 +239,10 @@
                     <img src="./img/hotel/photoHotel1.jpg" style="width: 100%;height: 100%; padding-bottom: 2rem;">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p class="textInside">Интерьер, который обеспечен всеми необходимыми условиями для комфортного и полноценного отдыха. Из номеров открывается вид на красивую природу. Ресторан предлагает широкий выбор блюд национальной и европейской кухни. У нас действует
-                        бильярд и настольный теннис, также есть бассейн и сауна. По всей территории есть бесплатный Wi-Fi. Высококачественное обслуживание и качественные услуги отеля удовлетворят требования даже самого требовательного посетителя. Отель
-                        расположен в самом сердце города, рядом с многочисленными достопримечательностями и развлекательными центрами. Гостиничный комплекс Агарцин-идеальное место для всех, кто хочет оторваться от городского шума и провести свой отдых
-                        на природе. Каждый день, проведенный здесь, будет полон незабываемых и приятных воспоминаний.</p>
+                    <p class="textInside">Интерьер, который обеспечен всем необходимыми условиями для комфортного и полноценного отдыха. Из номеров открывается вид на красивую природу. Ресторан предлагает широкий выбор блюд национальной и европейской кухни. Действует бильярд
+                        и настольный теннис, также есть бассейн и сауна. На всей территории есть бесплатный Wi-Fi. Высококачественное обслуживание и качественные услуги отеля удовлетворят самого требовательного посетителя. Гостиничный комплекс «Агарцин»
+                        - идеальное место для всех, кто хочет отдохнуть от городского шума и провести свой отдых на природе.
+                    </p>
                 </div>
             </div>
         </div>
@@ -279,11 +296,10 @@
                     <img src="./img/carMersedes.jpg" id="carPhoto">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p class="textInside">Для комфортного перемещения мы предлагаем микроавтобус Мерседес-Спринтер.<br>Что включает в себя микроавтобус этой модели?</p>
+                    <p class="textInside">Для перемещения мы предлагаем микроавтобус Мерседес-Спринтер,<br>который включает в себя:</p>
                     <ul>
-                        <li class="textInside">в первую очередь – просторный салон с кондиционером и комфортными креслами;</li>
-                        <li class="textInside">имеется видеосистема (TV+DVD) и аудиосистема;</li>
-                        <li class="textInside">этот автомобиль позволит Вам с комфортом и приятными впечатлениями перемещаться с одной точки нашего уикенда в другую</li>
+                        <li class="textInside">просторный салон с кондиционером и удобными креслами;</li>
+                        <li class="textInside">автомобиль позволит с комфортом перемещаться с одной точки нашего уикенда в другую.</li>
                     </ul>
                 </div>
             </div>
@@ -302,7 +318,7 @@
                                 <center>
                                     <h5 class="card-title">Напишите отзыв</h5>
                                 </center>
-                                <p class="card-text">Напишите честный отзыв о нашем туре в любой из социальных сетей и получите скидку в 5%</p>
+                                <p class="card-text">Напишите отзыв о нашем туре в любой из социальных сетей и получите скидку в 5%</p>
                             </div>
 
                             <center><a href="#dontWorks" class="btn btn-primary mt-2" onclick="elemnt=document.getElementById('dontWorks'); elemnt.style.display='block'">Получить</a></center>
@@ -350,20 +366,32 @@
     <section id="connectWithUs">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <center>
-                        <div>
-                            <p class="connectionText">Свяжитесь с нами по номеру телефона:</p>
-                            <div style="display: flex;flex-direction: row;align-items: center;justify-content: center;">
-                                <p class="phoneNumbers">+79604593445(WhatsApp)</p>
-                                <p class="phoneNumbers" style="margin-left: 4rem;">+37491637887 (WhatsApp, Viber)</p>
-                            </div>
-
+                <center>
+                    <p class="connectionText" style="margin-bottom: 2rem;">Свяжитесь с нами по номеру телефона:</p>
+                </center>
+                <div class="col-lg-4 col-sm-12">
+                    <div>
+                        <div style="display: flex;flex-direction: row;align-items: center;justify-content: center;">
+                            <p class="phoneNumbers">+79604593445(WhatsApp)</p>
                         </div>
-                    </center>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div>
+                        <div style="display: flex;flex-direction: row;align-items: center;justify-content: center;">
+                            <p class="phoneNumbers">+37491637887 (WhatsApp, Viber)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div>
+                        <div style="display: flex;flex-direction: row;align-items: center;justify-content: center;">
+                            <p class="phoneNumbers">+79056773535 (WhatsApp)</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row" id="secondRowOfConnection">
+            <div class="row" id="secondRowOfConnection" style="margin-top: 1rem;">
                 <div class="col-12" id="connectWithUsSecond">
                     <div class="connectionContainer">
                         <p class="connectionTextSecond" id="telegramText">Мы в Telegram</p>
