--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
             <li class="textInside">И конечно же, ваше хорошее настроение.</li>
         </ul>
         <p class="textInside" style="margin-top: 2rem;"><b>Описание тура:</b></p>
-        <p class="textInside"><b>Стоимость пакета: </b>133 тыс. драмов. 133 тыс. драмов. В стоимость входит: </p>
+        <p class="textInside"><b>Стоимость пакета: </b>133 тыс. драмов. В стоимость входит: </p>
         <ul style="margin-top: 1rem;">
             <li class="textInside">Трансфер</li>
             <li class="textInside">Гостиница</li>
@@ -111,8 +111,8 @@
     <section id="howItGoing">
         <h1 class="ml-2 mb-4 textWhat">Кто будет проводить тур?</h1>
         <p class="textInside">Наш тур будут проводить высококвалифицированные специалисты.</p>
-        <p class="textInside" style="margin-top: 1rem;"><b>Мирзоян Татул Суренович - </b>Руководитель проекта. Дипломированный психолог, сетифицированный гипнотерапевт. Автор 24 уникальных гипнотерапевтических программ. Его основная работа связана тем, что он с помощью гипно и смехотерапии помогает
-            людям, избавится от накопившихся психологических проблем.
+        <p class="textInside" style="margin-top: 1rem;"><b>Мирзоян Татул Суренович - </b>Руководитель проекта. Дипломированный психолог, сертифицированный гипнотерапевт. Автор 24 уникальных гипнотерапевтических программ. Его основная работа связана с тем, что он с помощью гипно и смехотерапии помогает
+            людям избавиться от накопившихся психологических проблем.
         </p>
         <div class="container">
             <div class="row">
@@ -264,7 +264,10 @@
                                     <img src="img/hotel/photoHotel3.jpg" class="d-block w-100">
                                 </div>
                                 <div class="carousel-item" id="c4">
-                                    <img src="img/hotel/photoHotel4.jpg" class="d-block w-100">
+                                    <div>
+                                        <img src="img/hotel/photoHotel4.jpg" class="d-block h-100">
+                                    </div>
+
                                 </div>
                                 <div class="carousel-item" id="c5">
                                     <img src="img/hotel/photoHotel5.jpg" class="d-block w-100">
