--- a/static/index.html
+++ b/static/index.html
@@ -53,6 +53,9 @@
             <li class="textInside">Сеансы</li>
             <li class="textInside">Терапия</li>
             <li class="textInside">Консультация</li>
+            <li class="textInside">Бассейн</li>
+            <li class="textInside">Тренажерный зал</li>
+            <li class="textInside">Настольный теннис</li>
         </ul>
         <p class="textInside" style="margin-bottom: 1rem;">В гостинице так же можно пользоваться баром, бильярдом и сауной на платной основе. </p>
         <ul>
